crates/vihaco-parser/tests/compile_errors/delimiters_on_unit.rs
use vihaco_parser::Parse;
#[derive(Parse)]
enum Bad {
    #[delimiters(open = "[", close = "]", separator = ",")]
    Unit,  // delimiters on unit variant — error
}
fn main() {}
